tests/baselines/reference/parserMemberAccessorDeclaration16(target=es5).errors.txt
error TS5107: Option 'target=ES5' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
parserMemberAccessorDeclaration16.ts(2,8): error TS1052: A 'set' accessor parameter cannot have an initializer.


!!! error TS5107: Option 'target=ES5' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
==== parserMemberAccessorDeclaration16.ts (1 errors) ====
    class C {
       set Foo(a = 1) { }
           ~~~
!!! error TS1052: A 'set' accessor parameter cannot have an initializer.
    }